2007-09-20  Ross Burton  <ross@openedhand.com>

	* xresponse.c:
	Fix order of coordinates when outputting the monitor rectangle
	(thanks Mika Yrjölä)

2007-01-02  Matthew Allum  <mallum@openedhand.com>

	* xresponse.doap:
	Fix Typo

2007-01-02  Matthew Allum  <mallum@openedhand.com>

	* xresponse.doap:
	Add a doap file.

2006-08-23  Matthew Allum  <mallum@openedhand.com>

	* xresponse.c: (get_xevent_timed), (wait_response), (usage):
	Patch from Tuukka Tolvanen to explain --wait 0 in help and
	avoid potential infinite loop (  #38466 )

2005-07-07  mallum  <mallum@openedhand.com>

	* xresponse.c: (log_action), (usage), (main):
	Patch via Eero, add basic verbosity, ignore diff on out of order
        server timestamps

2005-06-16  mallum,,,  <mallum@openedhand.com>

	* xresponse.c: (main):
	Dont collect damage between drags.

2005-06-15  mallum,,,  <mallum@openedhand.com>

	* xresponse.c: (handle_xerror), (fake_event), (main):
	Rework drag code. 
	Dont ignore last drag point.

2005-06-14  mallum,,,  <mallum@openedhand.com>

	* README:
	* xresponse.c: (handle_xerror), (fake_event), (wait_response),
	(usage), (main):
	Add initial dragging code

2005-03-07  mallum,,,  <mallum@openedhand.com>

	* README:
	* configure.ac:
	* xresponse.c: (get_server_time), (get_xevent_timed), (fake_event),
	(wait_response), (usage), (main):
	Various tweaks.

2005-01-18  mallum,,,  <mallum@openedhand.com>

	* README:
	Populate
	* configure.ac:
	Bump up to 0.2
	* xresponse.c: (get_xevent_timed), (usage), (main):
	Add support for '-i' switch

2005-01-18  mallum,,,  <mallum@openedhand.com>

	* xresponse.c: (handle_xerror), (log_action), (get_server_time),
	(get_xevent_timed), (setup_display), (eat_damage), (fake_event),
	(wait_response), (usage), (main):
	Redo command line parsing with extra opts and loop.	

2005-01-18  mallum,,,  <mallum@openedhand.com>

	* xresponse.c: (log_action), (wait_response), (usage), (main):
	Improve option handling, log output.
